--- a/index2.html
+++ b/index2.html
@@ -43,31 +43,43 @@
 		<link href="css/styles.css" rel="stylesheet" />
 	</head>
 	<body id="page-top" class="container">
+		<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
+		<nav id="sidebar-wrapper">
+			<ul class="sidebar-nav">
+				<li class="sidebar-brand"><a href="#page-top"></a></li>
+				<!-- <a class="navbar-brand js-scroll-trigger" href="#page-top">
+					<span class=""
+						><img
+							class="img-fluid img-profile rounded-circle mx-auto mb-2"
+							src="https://bootstrapmade.com/demo/templates/iPortfolio/assets/img/profile-img.jpg"
+							alt="..."
+					/></span>
+				</a> -->
+				<!-- <h3 class="main-name">Leonel De León</h3> -->
+				<li class="sidebar-nav-item"><a href="#page-top">Inicio</a></li>
+				<li class="sidebar-nav-item"><a href="#about">Acerca de</a></li>
+				<li class="sidebar-nav-item"><a href="#services">Habilidades</a></li>
+				<li class="sidebar-nav-item"><a href="#portfolio">Portafolio</a></li>
+				<li class="sidebar-nav-item"><a href="#contact">Contacto</a></li>
+			</ul>
+		</nav>
 		<header>
 			<div class="row">
 				<!-- code start -->
 				<div class="twPc-div">
 					<a class="twPc-bg twPc-block"></a>
 					<div>
-						<a
-							title="Mert S. Kaplan"
-							href="https://media.licdn.com/dms/image/D4E03AQGyFj8ryBg6ow/profile-displayphoto-shrink_200_200/0/1688959430950?e=1698278400&v=beta&t=ptzavYw0PlEHeANIm_-LS3OYmJZ4diG7Otj5ck4vwOA"
-							class="twPc-avatarLink"
-						>
-							<img
-								alt="Mert S. Kaplan"
-								src="https://media.licdn.com/dms/image/D4E03AQGyFj8ryBg6ow/profile-displayphoto-shrink_200_200/0/1688959430950?e=1698278400&v=beta&t=ptzavYw0PlEHeANIm_-LS3OYmJZ4diG7Otj5ck4vwOA"
-								class="twPc-avatarImg"
-							/>
-						</a>
+						<img
+							alt="Mert S. Kaplan"
+							src="https://media.licdn.com/dms/image/D4E03AQGyFj8ryBg6ow/profile-displayphoto-shrink_800_800/0/1688959432780?e=1705536000&v=beta&t=RM6iR2uPdhyTaMHQfaKpLAIVkp9JBy1B-AQfxSqaM68"
+							class="twPc-avatarImg twPc-avatarLink"
+						/>
 						<div class="twPc-divUser">
 							<div class="twPc-divName">
-								<a href="https://twitter.com/mertskaplan">Daniel Briones</a>
+								<h2>{{Daniel Briones}}</h2>
 							</div>
 							<span>
-								<a href="https://twitter.com/mertskaplan"
-									>Business Relationship Manager</a
-								>
+								<h6>{{Senior Business Relationship Manager}}</h6>
 							</span>
 						</div>
 					</div>
@@ -80,6 +92,41 @@
 			<div class="container">
 				<div class="section-title">
 					<h2>Acerca de</h2>
+					<p>
+						Soy Daniel Briones, un gerente de relaciones de negocios con más de
+						14 años de experiencia en el sector de las tecnologías de la
+						información y la industria gráfica. Actualmente trabajo en Grupo
+						Exi, una empresa líder en ofrecer soluciones de impresión y gestión
+						documental a diversos segmentos de mercado.
+					</p>
+					<br />
+					<p>
+						Mi misión es asesorar a las empresas en la optimización de sus
+						procesos de impresión, gestión documental, y comunicación gráfica,
+						mediante sistemas administrados de impresión (MPS), servicios de
+						gestión documental (BPS), e impresión industrial, comercial,
+						empaquete y etiquetas (IP). Para ello, cuento con la certificación
+						en negociación efectiva de Karras, y la certificación en sistemas de
+						impresión de producción de Konica Minolta. Además, soy coach en
+						fortalezas de Gallup, miembro de Toastmasters, y miembro networker
+						de BNI. Me apasionan los negocios y la tecnología, y me comprometo a
+						ayudar a los empresarios a tener negocios productivos y rentables.
+					</p>
+					<br />
+					<p>
+						Mi compromiso es: Que los empresarios, en todos los segmentos,
+						tengan negocios productivos y rentables.
+					</p>
+					<br />
+					<p>¡Contactame!</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="content-section bg-light" id="about">
+			<div class="container">
+				<div class="section-title">
+					<h2>Habilidades</h2>
 					<ul>
 						<li>Certificado por Gallup como Coach en Fortalezas.</li>
 						<li>Certificado por Karras: En Negociación Efectiva.</li>
