--- a/index2.html
+++ b/index2.html
@@ -78,9 +78,9 @@
 							<div class="twPc-divName">
 								<h2>{{Daniel Briones}}</h2>
 							</div>
-							<span>
+							<div>
 								<h6>{{Senior Business Relationship Manager}}</h6>
-							</span>
+							</div>
 						</div>
 					</div>
 				</div>
