--- a/no-card.html
+++ b/no-card.html
@@ -8,7 +8,7 @@
 		/>
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Stylish Portfolio - Start Bootstrap Template</title>
+		<title>noCard - Profile</title>
 		<!-- Favicon-->
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 		<!-- Font Awesome icons (free version)-->
@@ -35,7 +35,75 @@
 		<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 		<nav id="sidebar-wrapper">
 			<ul class="sidebar-nav">
-				<li class="sidebar-brand"><a href="#page-top">Start Bootstrap</a></li>
+				<li class="sidebar-brand">
+					<a href="#page-top">{{Daniel Briones De León}}</a>
+				</li>
+				<div class="card bg-1" style="width: 100%">
+					<img
+						src="../assets/img/profile.jpeg"
+						class="card-img-top img-thumbnail rounded bg-primary"
+						alt="..."
+					/>
+					<div class="card-body">
+						<!-- <h5 class="card-title"></h5> -->
+						<footer class="footer text-center">
+							<div class="container px-1 px-lg-2">
+								<ul class="list-inline mb-1">
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-facebook"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-twitter"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-github"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-facebook"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-facebook"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-facebook"></i
+										></a>
+									</li>
+									<li class="list-inline-item">
+										<a
+											class="social-link rounded-circle text-white mr-1"
+											href="#!"
+											><i class="icon-social-facebook"></i
+										></a>
+									</li>
+								</ul>
+							</div>
+						</footer>
+					</div>
+				</div>
+
 				<li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
 				<li class="sidebar-nav-item"><a href="#about">About</a></li>
 				<li class="sidebar-nav-item"><a href="#services">Services</a></li>
@@ -48,42 +116,46 @@
 			class="masthead d-flex align-items-left"
 			style="
 				background: linear-gradient(
-						90deg,
-						rgba(255, 255, 255, 0.1) 0%,
-						rgba(255, 255, 255, 0.1) 100%
-					),
-					url('../assets/img/bg-masthead.jpg');
+							90deg,
+							rgba(255, 255, 255, 0.1) 0%,
+							rgba(255, 255, 255, 0.1) 100%
+						)
+						top center,
+					url('../assets/img/bg-masthead.jpeg');
+				background-repeat: no-repeat;
 			"
 		>
 			<div class="container px-4 px-lg-5 text-left">
-				<h2 class="mb-1">{{Daniel Briones}}</h2>
-				<h4 class="mb-5"><em>{{Senior Business Relationship Manager}}</em></h4>
+				<h2 class="mb-1"><mark>{{Daniel Briones}}</mark></h2>
+				<h4 class="mb-5">
+					<em><mark>{{Senior Business Relationship Manager}}</mark></em>
+				</h4>
 				<!-- <a class="btn btn-primary btn-xl" href="#about">Find Out More</a> -->
 			</div>
 		</header>
 		<!-- About-->
-		<section class="content-section bg-light" id="about">
+		<section class="content-section bg-3" id="about">
 			<div class="container px-4 px-lg-5 text-left">
 				<div class="row gx-4 gx-lg-5 justify-content-left">
 					<div class="col-lg-10">
-						<h2>Acerca de mi</h2>
+						<h2 class="mb-2">Acerca de mi</h2>
 						<div class="divider-custom divider-light">
 							<div class="divider-custom-line"></div>
 						</div>
 						<p class="lead mb-5">
-							Soy Daniel Briones, un gerente de relaciones de negocios con más
-							de 14 años de experiencia en el sector de las tecnologías de la
-							información y la industria gráfica. Actualmente trabajo en Grupo
-							Exi, una empresa líder en ofrecer soluciones de impresión y
-							gestión documental a diversos segmentos de mercado.
+							{{ Soy Daniel Briones, un gerente de relaciones de negocios con
+							más de 14 años de experiencia en el sector de las tecnologías de
+							la información y la industria gráfica. Actualmente trabajo en
+							Grupo Exi, una empresa líder en ofrecer soluciones de impresión y
+							gestión documental a diversos segmentos de mercado.}}
 						</p>
 						<img
 							class="masthead-avatar mb-5"
-							src="https://media.licdn.com/dms/image/D4E03AQGyFj8ryBg6ow/profile-displayphoto-shrink_800_800/0/1688959432780?e=1705536000&v=beta&t=RM6iR2uPdhyTaMHQfaKpLAIVkp9JBy1B-AQfxSqaM68"
+							src="../assets/img/profile.jpeg"
 							alt="avatar"
 						/>
 						<p class="lead mb-5">
-							Mi misión es asesorar a las empresas en la optimización de sus
+							{{ Mi misión es asesorar a las empresas en la optimización de sus
 							procesos de impresión, gestión documental, y comunicación gráfica,
 							mediante sistemas administrados de impresión (MPS), servicios de
 							gestión documental (BPS), e impresión industrial, comercial,
@@ -93,7 +165,7 @@
 							fortalezas de Gallup, miembro de Toastmasters, y miembro networker
 							de BNI. Me apasionan los negocios y la tecnología, y me comprometo
 							a ayudar a los empresarios a tener negocios productivos y
-							rentables.
+							rentables.}}
 						</p>
 						<!-- <p class="lead mb-5">
 							Mi compromiso es: Que los empresarios, en todos los segmentos,
@@ -106,53 +178,82 @@
 			</div>
 		</section>
 		<!-- Services-->
-		<section
-			class="content-section bg-primary text-white text-center"
-			id="services"
-		>
+		<section class="content-section bg-4 text-white text-center" id="services">
 			<div class="container px-4 px-lg-5">
 				<div class="content-section-heading">
-					<h3 class="text-secondary mb-0">Services</h3>
-					<h2 class="mb-5">What We Offer</h2>
+					<h3 class="text-secondary mb-0"></h3>
+					<h2 class="mb-2">Habilidades</h2>
+					<div class="divider-custom divider-light">
+						<!-- <div class="divider-custom-line"></div> -->
+					</div>
 				</div>
-				<div class="row gx-4 gx-lg-5">
+				<div
+					class="row gx-4 gx-lg-5 d-flex flex-row flex-nowrap border-light overflow-auto"
+				>
 					<div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
 						<span class="service-icon rounded-circle mx-auto mb-3"
 							><i class="icon-screen-smartphone"></i
 						></span>
-						<h4><strong>Responsive</strong></h4>
-						<p class="text-faded mb-0">Looks great on any screen size!</p>
+						<h4>
+							<strong
+								>Administración de las tecnologías de la información</strong
+							>
+						</h4>
+						<p class="text-faded mb-0"></p>
 					</div>
 					<div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
 						<span class="service-icon rounded-circle mx-auto mb-3"
 							><i class="icon-pencil"></i
 						></span>
-						<h4><strong>Redesigned</strong></h4>
-						<p class="text-faded mb-0">Freshly redesigned for Bootstrap 5.</p>
+						<h4><strong>Gestión del color</strong></h4>
+						<p class="text-faded mb-0"></p>
 					</div>
 					<div class="col-lg-3 col-md-6 mb-5 mb-md-0">
 						<span class="service-icon rounded-circle mx-auto mb-3"
 							><i class="icon-like"></i
 						></span>
-						<h4><strong>Favorited</strong></h4>
-						<p class="text-faded mb-0">
-							Millions of users
-							<i class="fas fa-heart"></i>
-							Start Bootstrap!
-						</p>
+						<h4><strong>Impresión digital</strong></h4>
+						<p class="text-faded mb-0"></p>
 					</div>
 					<div class="col-lg-3 col-md-6">
 						<span class="service-icon rounded-circle mx-auto mb-3"
 							><i class="icon-mustache"></i
 						></span>
-						<h4><strong>Question</strong></h4>
-						<p class="text-faded mb-0">I mustache you a question...</p>
+						<h4>
+							<strong>Administración de contratos de arrendamiento</strong>
+						</h4>
+						<p class="text-faded mb-0"></p>
+					</div>
+					<div class="col-lg-3 col-md-6">
+						<span class="service-icon rounded-circle mx-auto mb-3"
+							><i class="icon-mustache"></i
+						></span>
+						<h4>
+							<strong>Servicios administrado</strong>
+						</h4>
+						<p class="text-faded mb-0"></p>
 					</div>
 				</div>
+
+				<span aria-hidden="true"><i class="icon-arrow-left"></i></span>
+				<span class="sr-only">Previous</span>
+
+				<span aria-hidden="true"><i class="icon-arrow-right"></i></span>
+				<span class="sr-only">Next</span>
 			</div>
 		</section>
 		<!-- Callout-->
-		<section class="callout">
+		<section
+			class="callout"
+			style="
+				background: linear-gradient(
+						90deg,
+						rgba(255, 255, 255, 0.1) 0%,
+						rgba(255, 255, 255, 0.1) 100%
+					),
+					url('./assets/img/bg-callout.jpg');
+			"
+		>
 			<div class="container px-4 px-lg-5 text-center">
 				<h2 class="mx-auto mb-5">
 					Welcome to
@@ -167,15 +268,25 @@
 			</div>
 		</section>
 		<!-- Portfolio-->
-		<section class="content-section" id="portfolio">
+		<section
+			class="content-section bg-dark text-white text-center"
+			id="portfolio"
+		>
 			<div class="container px-4 px-lg-5">
 				<div class="content-section-heading text-center">
-					<h3 class="text-secondary mb-0">Portfolio</h3>
-					<h2 class="mb-5">Recent Projects</h2>
+					<h3 class="text-secondary mb-0"></h3>
+					<h2 class="mb-5">Portafolio</h2>
 				</div>
-				<div class="row gx-0">
+				<div
+					class="row gx-4 gx-lg-5 d-flex flex-row flex-nowrap border-light overflow-auto"
+				>
 					<div class="col-lg-6">
-						<a class="portfolio-item" href="#!">
+						<a
+							class="portfolio-item"
+							data-bs-toggle="modal"
+							data-bs-target="#portfolioModal2"
+							href="#!"
+						>
 							<div class="caption">
 								<div class="caption-content">
 									<div class="h2">Stationary</div>
@@ -246,6 +357,12 @@
 						</a>
 					</div>
 				</div>
+				<br />
+				<span aria-hidden="true"><i class="icon-arrow-left"></i></span>
+				<span class="sr-only">Previous</span>
+
+				<span aria-hidden="true"><i class="icon-arrow-right"></i></span>
+				<span class="sr-only">Next</span>
 			</div>
 		</section>
 		<!-- Call to Action-->
@@ -288,13 +405,78 @@
 						></a>
 					</li>
 				</ul>
-				<p class="text-muted small mb-0">Copyright &copy; Your Website 2023</p>
+				<p class="text-muted small mb-0">Copyright &copy; no-card 2023</p>
 			</div>
 		</footer>
+
 		<!-- Scroll to Top Button-->
 		<a class="scroll-to-top rounded" href="#page-top"
 			><i class="fas fa-angle-up"></i
 		></a>
+
+		<!--MODALS-->
+		<!-- Portfolio Modal 2-->
+		<div
+			class="portfolio-modal modal fade"
+			id="portfolioModal2"
+			tabindex="-1"
+			aria-labelledby="portfolioModal2"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog modal-xl">
+				<div class="modal-content">
+					<div class="modal-header border-0">
+						<button
+							class="btn-close"
+							type="button"
+							data-bs-dismiss="modal"
+							aria-label="Close"
+						></button>
+					</div>
+					<div class="modal-body text-center pb-5">
+						<div class="container">
+							<div class="row justify-content-center">
+								<div class="col-lg-8">
+									<!-- Portfolio Modal - Title-->
+									<h2
+										class="portfolio-modal-title text-secondary text-uppercase mb-0"
+									>
+										Tasty Cake
+									</h2>
+									<!-- Icon Divider-->
+									<div class="divider-custom">
+										<div class="divider-custom-line"></div>
+										<div class="divider-custom-icon">
+											<i class="fas fa-star"></i>
+										</div>
+										<div class="divider-custom-line"></div>
+									</div>
+									<!-- Portfolio Modal - Image-->
+									<img
+										class="img-fluid rounded mb-5"
+										src="assets/img/portfolio/cake.png"
+										alt="..."
+									/>
+									<!-- Portfolio Modal - Text-->
+									<p class="mb-4">
+										Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+										Mollitia neque assumenda ipsam nihil, molestias magnam,
+										recusandae quos quis inventore quisquam velit asperiores,
+										vitae? Reprehenderit soluta, eos quod consequuntur itaque.
+										Nam.
+									</p>
+									<button class="btn btn-primary" data-bs-dismiss="modal">
+										<i class="fas fa-xmark fa-fw"></i>
+										Close Window
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!--END MODALS-->
 		<!-- Bootstrap core JS-->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 		<!-- Core theme JS-->
