--- a/no-card.html
+++ b/no-card.html
@@ -179,7 +179,7 @@
 		</section>
 		<!-- Services-->
 		<section class="content-section bg-4 text-white text-center" id="services">
-			<div class="container px-4 px-lg-5">
+			<div class="container px-4 px-lg-5 text-dark">
 				<div class="content-section-heading">
 					<h3 class="text-secondary mb-0"></h3>
 					<h2 class="mb-2">Habilidades</h2>
@@ -268,10 +268,7 @@
 			</div>
 		</section>
 		<!-- Portfolio-->
-		<section
-			class="content-section bg-dark text-white text-center"
-			id="portfolio"
-		>
+		<section class="content-section bg-1 text-white text-center" id="portfolio">
 			<div class="container px-4 px-lg-5">
 				<div class="content-section-heading text-center">
 					<h3 class="text-secondary mb-0"></h3>
