feature: changes on design

--- a/no-card.html
+++ b/no-card.html
@@ -35,6 +35,7 @@
 		<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 		<nav id="sidebar-wrapper">
 			<ul class="sidebar-nav">
+				<li class="sidebar-nav-item"><a href="#">-</a></li>
 				<li class="sidebar-brand">
 					<a href="#page-top">{{Daniel Briones De León}}</a>
 				</li>
@@ -103,7 +104,6 @@
 						</footer>
 					</div>
 				</div>
-
 				<li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
 				<li class="sidebar-nav-item"><a href="#about">About</a></li>
 				<li class="sidebar-nav-item"><a href="#services">Services</a></li>
@@ -190,49 +190,107 @@
 				<div
 					class="row gx-4 gx-lg-5 d-flex flex-row flex-nowrap border-light overflow-auto"
 				>
-					<div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-						<span class="service-icon rounded-circle mx-auto mb-3"
-							><i class="icon-screen-smartphone"></i
-						></span>
-						<h4>
-							<strong
-								>Administración de las tecnologías de la información</strong
-							>
-						</h4>
-						<p class="text-faded mb-0"></p>
+					<!--  -->
+					<div class="col-xl-3 col-md-6 mb-4">
+						<div class="card border-left-primary shadow h-100 py-2">
+							<div class="card-body">
+								<div class="row no-gutters align-items-center">
+									<div class="col mr-2">
+										<div
+											class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+										>
+											Administración de las tecnologías de la información
+										</div>
+										<div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+									</div>
+									<div class="col-center">
+										<i class="fas fa-desktop fa-6x text-gray-800"></i>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-						<span class="service-icon rounded-circle mx-auto mb-3"
-							><i class="icon-pencil"></i
-						></span>
-						<h4><strong>Gestión del color</strong></h4>
-						<p class="text-faded mb-0"></p>
+					<!--  -->
+					<div class="col-xl-3 col-md-6 mb-4">
+						<div class="card border-left-primary shadow h-100 py-2">
+							<div class="card-body">
+								<div class="row no-gutters align-items-center">
+									<div class="col mr-2">
+										<div
+											class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+										>
+											Gestión del color
+										</div>
+										<div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+									</div>
+									<div class="col-center">
+										<i class="fas fa-paint-brush fa-6x text-gray-800"></i>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-						<span class="service-icon rounded-circle mx-auto mb-3"
-							><i class="icon-like"></i
-						></span>
-						<h4><strong>Impresión digital</strong></h4>
-						<p class="text-faded mb-0"></p>
+					<!--  -->
+					<div class="col-xl-3 col-md-6 mb-4">
+						<div class="card border-left-primary shadow h-100 py-2">
+							<div class="card-body">
+								<div class="row no-gutters align-items-center">
+									<div class="col mr-2">
+										<div
+											class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+										>
+											Impresión digital
+										</div>
+										<div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+									</div>
+									<div class="col-center">
+										<i class="fas fa-print fa-6x text-gray-800"></i>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-lg-3 col-md-6">
-						<span class="service-icon rounded-circle mx-auto mb-3"
-							><i class="icon-mustache"></i
-						></span>
-						<h4>
-							<strong>Administración de contratos de arrendamiento</strong>
-						</h4>
-						<p class="text-faded mb-0"></p>
+					<!--  -->
+					<div class="col-xl-3 col-md-6 mb-4">
+						<div class="card border-left-primary shadow h-100 py-2">
+							<div class="card-body">
+								<div class="row no-gutters align-items-center">
+									<div class="col mr-2">
+										<div
+											class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+										>
+											Administración de contratos de arrendamiento
+										</div>
+										<div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+									</div>
+									<div class="col-center">
+										<i class="fas fa-file fa-6x text-gray-800"></i>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-lg-3 col-md-6">
-						<span class="service-icon rounded-circle mx-auto mb-3"
-							><i class="icon-mustache"></i
-						></span>
-						<h4>
-							<strong>Servicios administrado</strong>
-						</h4>
-						<p class="text-faded mb-0"></p>
+					<!--  -->
+					<div class="col-xl-3 col-md-6 mb-4">
+						<div class="card border-left-primary shadow h-100 py-2">
+							<div class="card-body">
+								<div class="row no-gutters align-items-center">
+									<div class="col mr-2">
+										<div
+											class="text-xs font-weight-bold text-primary text-uppercase mb-1"
+										>
+											Servicios administrado
+										</div>
+										<div class="h5 mb-0 font-weight-bold text-gray-800"></div>
+									</div>
+									<div class="col-center">
+										<i class="fas fa-cogs fa-6x text-gray-800"></i>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
+					<!--  -->
 				</div>
 
 				<span aria-hidden="true"><i class="icon-arrow-left"></i></span>
@@ -255,15 +313,11 @@
 			"
 		>
 			<div class="container px-4 px-lg-5 text-center">
-				<h2 class="mx-auto mb-5">
-					Welcome to
-					<em>your</em>
-					next website!
-				</h2>
+				<h2 class="mx-auto mb-5">Visita mi sitio web!</h2>
 				<a
 					class="btn btn-primary btn-xl"
 					href="https://startbootstrap.com/theme/stylish-portfolio/"
-					>Download Now!</a
+					>Ir!</a
 				>
 			</div>
 		</section>
@@ -365,8 +419,9 @@
 		<!-- Call to Action-->
 		<section class="content-section bg-primary text-white">
 			<div class="container px-4 px-lg-5 text-center">
-				<h2 class="mb-4">The buttons below are impossible to resist...</h2>
-				<a class="btn btn-xl btn-light me-4" href="#!">Click Me!</a>
+				<h2 class="mb-4">Platiquemos</h2>
+				<a class="btn-toggle btn btn-xl btn-light me-4" href="#!">Contacto!</a>
+				<!-- <a class="" href="#"><i class="fas fa-bars"></i></a> -->
 				<a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
 			</div>
 		</section>
