fix image masthead

--- a/no-card.html
+++ b/no-card.html
@@ -113,7 +113,7 @@
 		</nav>
 		<!-- Header-->
 		<header
-			class="masthead d-flex align-items-left"
+			class="masthead responsive center"
 			style="
 				background: linear-gradient(
 							90deg,
