--- a/no-card.html
+++ b/no-card.html
@@ -27,10 +27,11 @@
 			rel="stylesheet"
 			type="text/css"
 		/>
+
 		<!-- Core theme CSS (includes Bootstrap)-->
 		<link href="css/no-card.css" rel="stylesheet" />
 	</head>
-	<body id="page-top">
+	<body id="page-top" class="container">
 		<!-- Navigation-->
 		<a class="menu-toggle rounded" href="#"><i class="fas fa-bars"></i></a>
 		<nav id="sidebar-wrapper">
@@ -68,21 +69,21 @@
 										<a
 											class="social-link rounded-circle text-white mr-1"
 											href="#!"
-											><i class="icon-social-github"></i
+											><i class="icon-social-youtube"></i
 										></a>
 									</li>
 									<li class="list-inline-item">
 										<a
 											class="social-link rounded-circle text-white mr-1"
 											href="#!"
-											><i class="icon-social-facebook"></i
+											><i class="icon-social-linkedin"></i
 										></a>
 									</li>
 									<li class="list-inline-item">
 										<a
 											class="social-link rounded-circle text-white mr-1"
 											href="#!"
-											><i class="icon-social-facebook"></i
+											><i class="icon-compass"></i
 										></a>
 									</li>
 									<li class="list-inline-item">
@@ -104,25 +105,30 @@
 						</footer>
 					</div>
 				</div>
-				<li class="sidebar-nav-item"><a href="#page-top">Home</a></li>
-				<li class="sidebar-nav-item"><a href="#about">About</a></li>
-				<li class="sidebar-nav-item"><a href="#services">Services</a></li>
-				<li class="sidebar-nav-item"><a href="#portfolio">Portfolio</a></li>
-				<li class="sidebar-nav-item"><a href="#contact">Contact</a></li>
+				<li class="sidebar-nav-item"><a href="#page-top">Inicio</a></li>
+				<li class="sidebar-nav-item"><a href="#about">Acerca de</a></li>
+				<li class="sidebar-nav-item"><a href="#services">Servicios</a></li>
+				<li class="sidebar-nav-item"><a href="#portfolio">Poratfolio</a></li>
+				<li class="sidebar-nav-item"><a href="#contact">Contacto</a></li>
 			</ul>
 		</nav>
 		<!-- Header-->
 		<header
-			class="masthead responsive center"
+			class="masthead d-flex align-items-left responsive"
 			style="
 				background: linear-gradient(
-							90deg,
-							rgba(255, 255, 255, 0.1) 0%,
-							rgba(255, 255, 255, 0.1) 100%
-						)
-						top center,
-					url('../assets/img/bg-masthead.jpeg');
-				background-repeat: no-repeat;
+						90deg,
+						rgba(255, 255, 255, 0.1) 0%,
+						rgba(255, 255, 255, 0.1) 100%
+					),
+					url('../assets/img/bg-masthead.jpeg') no-repeat center center;
+				background-size: cover;
+				height: 60vh;
+				color: white;
+				text-align: left;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 			"
 		>
 			<div class="container px-4 px-lg-5 text-left">
@@ -182,7 +188,7 @@
 			<div class="container px-4 px-lg-5 text-dark">
 				<div class="content-section-heading">
 					<h3 class="text-secondary mb-0"></h3>
-					<h2 class="mb-2">Habilidades</h2>
+					<h2 class="mb-2">Servicios</h2>
 					<div class="divider-custom divider-light">
 						<!-- <div class="divider-custom-line"></div> -->
 					</div>
@@ -301,7 +307,7 @@
 			</div>
 		</section>
 		<!-- Callout-->
-		<section
+		<!-- <section
 			class="callout"
 			style="
 				background: linear-gradient(
@@ -320,7 +326,7 @@
 					>Ir!</a
 				>
 			</div>
-		</section>
+		</section> -->
 		<!-- Portfolio-->
 		<section class="content-section bg-1 text-white text-center" id="portfolio">
 			<div class="container px-4 px-lg-5">
@@ -417,16 +423,16 @@
 			</div>
 		</section>
 		<!-- Call to Action-->
-		<section class="content-section bg-primary text-white">
+		<!-- <section class="content-section bg-primary text-white">
 			<div class="container px-4 px-lg-5 text-center">
 				<h2 class="mb-4">Platiquemos</h2>
 				<a class="btn-toggle btn btn-xl btn-light me-4" href="#!">Contacto!</a>
-				<!-- <a class="" href="#"><i class="fas fa-bars"></i></a> -->
+				<a class="" href="#"><i class="fas fa-bars"></i></a>
 				<a class="btn btn-xl btn-dark" href="#!">Look at Me!</a>
 			</div>
-		</section>
+		</section> -->
 		<!-- Map-->
-		<div class="map" id="contact">
+		<!-- <div class="map" id="contact">
 			<iframe
 				src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"
 			></iframe>
@@ -436,7 +442,7 @@
 					href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"
 				></a
 			></small>
-		</div>
+		</div> -->
 		<!-- Footer-->
 		<footer class="footer text-center">
 			<div class="container px-4 px-lg-5">
@@ -531,6 +537,7 @@
 		<!--END MODALS-->
 		<!-- Bootstrap core JS-->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 		<!-- Core theme JS-->
 		<script src="js/scripts.js"></script>
 	</body>
